# LearnHarmonyOSPlayer

./: .gitignore  README.OPENSOURCE  README.md  changelog.md
ijkplayer_hos/: .gitignore  README.md  build.gradle  settings.gradle
ijkplayer_hos/entry/: build.gradle
ijkplayer_hos/entry/src/main/: config.json
ijkplayer_hos/entry/src/main/java/com/tv/danmaku/ijk/constant/: Constants.java  MediaConstant.java  RouteRegister.java
ijkplayer_hos/entry/src/main/java/com/tv/danmaku/ijk/media/example/: MyApplication.java
ijkplayer_hos/entry/src/main/java/com/tv/danmaku/ijk/resource/: IResource.java  Resource.java
ijkplayer_hos/entry/src/main/java/com/tv/danmaku/ijk/utils/: LogUtils.java  ResTUtil.java  SliceNaviUtil.java  TextUtils.java
ijkplayer_hos/entry/src/main/resources/base/element/: string.json
ijkplayer_hos/entry/src/main/resources/base/layout/: ability_main.xml  item_hud_list.xml  item_sample_play_list.xml  sample_play_list_slice.xml  video_play_slice.xml
ijkplayer_hos/entry/src/ohosTest/: config.json
ijkplayer_hos/entry/src/ohosTest/java/com/tv/danmaku/ijk/media/example/: ExampleOhosTest.java
ijkplayer_hos/entry/src/test/java/com/tv/danmaku/ijk/media/example/: ExampleTest.java
ijkplayer_hos/ijkplayer/: build.gradle
ijkplayer_hos/ijkplayer/src/main/: config.json
ijkplayer_hos/ijkplayer/src/main/java/tv/danmaku/ijk/media/player/: AbstractMediaPlayer.java  AndroidMediaPlayer.java  IMediaPlayer.java  ISurfaceTextureHolder.java  IjkMediaCodecInfo.java  IjkMediaMeta.java  IjkMediaPlayer.java  IjkTimedText.java  MediaInfo.java  MediaPlayerProxy.java  MixCompile.java
ijkplayer_hos/ijkplayer/src/main/java/tv/danmaku/ijk/media/player/pragma/: DebugLog.java
ijkplayer_hos/ijkplayer/src/main/java/tv/danmaku/ijk/utils/: Log.java  TextUtils.java
ijkplayer_hos/ijkplayer/src/main/resources/base/element/: string.json
ijkplayer_hos/ijkplayer_so/: build.gradle
ijkplayer_hos/ijkplayer_so/src/main/: config.json
ijkplayer_hos/ijkplayer_so/src/main/cpp/: CMakeLists.txt  ff_ffplay.c  ijkplayer.c  ijksdl_egl.c  ijksdl_egl.h  ijksdl_extra_log.c  ijksdl_log.h  ijksdl_mutex.c  ijksdl_thread.c  mix_compile.h
ijkplayer_hos/ijkplayer_so/src/main/cpp/android/: android_audiotrack.c  android_nativewindow.c  ijkplayer_android.c  ijkplayer_jni.c  ijksdl_android_jni.c  ijksdl_android_jni.h  ijksdl_aout_android_audiotrack.c  ijksdl_aout_android_opensles.c  ijksdl_codec_android_mediacodec.c  ijksdl_codec_android_mediacodec.h  ijksdl_codec_android_mediacodec_dummy.c  ijksdl_codec_android_mediacodec_internal.c  ijksdl_codec_android_mediacodec_java.c  ijksdl_codec_android_mediaformat_java.c  ijksdl_vout_android_nativewindow.c  ijksdl_vout_android_surface.c  ijksdl_vout_overlay_android_mediacodec.c
ijkplayer_hos/ijkplayer_so/src/main/cpp/android/pipeline/: ffpipeline_android.c  ffpipenode_android_mediacodec_vdec.c  h264_nal.h
ijkplayer_hos/ijkplayer_so/src/main/cpp/gles2/: renderer.c  renderer_rgb.c
ijkplayer_hos/ijkplayer_so/src/main/cpp/gles2/fsh/: rgb.fsh.c  yuv420p.fsh.c  yuv420sp.fsh.c  yuv444p10le.fsh.c
ijkplayer_hos/ijkplayer_so/src/main/cpp/gles2/vsh/: mvp.vsh.c
ijkplayer_hos/ijkplayer_so/src/main/cpp/ijksdl/: CMakeLists.txt
ijkplayer_hos/ijkplayer_so/src/main/cpp/ijksdl/ohoslog/: CMakelists.txt  ohos_log.cpp  ohos_log.h
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/: j4a_allclasses.include.h  j4a_allclasses.loader.h  j4a_base.c  j4a_base.h
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/android/media/: MediaCodec.c  MediaFormat.c  PlaybackParams.c
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/android/os/: Build.c  Bundle.c
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/java/nio/: Buffer.c  ByteBuffer.c
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/java/util/: ArrayList.c
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/ohos/media/audio/: AudioRenderer.c  AudioRenderer.h  AudioRenderer.include.j4a  AudioRenderer.java  AudioRenderer.loader.j4a  AudioRendererInfo.c  AudioRendererInfo.h  AudioRendererInfo.include.j4a  AudioRendererInfo.java  AudioRendererInfo.loader.j4a  AudioStreamInfo.c  AudioStreamInfo.h  AudioStreamInfo.include.j4a  AudioStreamInfo.java  AudioStreamInfo.loader.j4a
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/ohos/media/codec/: Codec.c  Codec.h  Codec.include.j4a  Codec.java  Codec.loader.j4a
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/ohos/media/common/: BufferInfo.c  BufferInfo.h  BufferInfo.include.j4a  BufferInfo.java  BufferInfo.loader.j4a  Format.c  Format.h  Format.include.j4a  Format.java  Format.loader.j4a  Source.c  Source.h  Source.include.j4a  Source.java  Source.loader.j4a
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/ohos/media/extractor/: Extractor.c  Extractor.h  Extractor.include.j4a  Extractor.java  Extractor.loader.j4a
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/ohos/media/mycodec/: MyICodecListener.c  MyICodecListener.h  MyICodecListener.include.j4a  MyICodecListener.java  MyICodecListener.loader.j4a
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/ohos/utils/: PacMap.c  PacMap.h  PacMap.include.j4a  PacMap.java  PacMap.loader.j4a
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/tv/danmaku/ijk/media/player/: IjkMediaPlayer.c  IjkMediaPlayer.loader.j4a
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4a/class/tv/danmaku/ijk/media/player/misc/: IAndroidIO.c  IMediaDataSource.c
ijkplayer_hos/ijkplayer_so/src/main/cpp/j4au/class/android/media/: AudioTrack.util.c  AudioTrack.util.h
ijkplayer_hos/ijkplayer_so/src/main/cpp/libs/libffmpeg/include/: ffLogWrapper.h
ijkplayer_hos/ijkplayer_so/src/main/cpp/libs/libffmpeg/include/libavutil/: log.h
ijkplayer_hos/ijkplayer_so/src/main/cpp/libs/libffmpeg/include/libffmpeg/: config.h
ijkplayer_hos/ijkplayer_so/src/main/cpp/log/: log.c  log.h
ijkplayer_hos/ijkplayer_so/src/main/cpp/ohos/: AudioRendererWrapper.c  AudioRendererWrapper.h  audio_stream_info.c  audio_stream_info.h
ijkplayer_hos/ijkplayer_so/src/main/resources/base/element/: string.json
ijkplayer_hos/ijkplayer_so/src/test/java/com/example/ijkplayer_so/: ExampleTest.java
(+22 files in other folders)
